Nginx/nginx-dp.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: dictionary
spec:
  selector:
    app: nginx-pod
  type: NodePort
  ports:
  - port: 80
    targetPort: 8089
    nodePort: 31964
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dp
  namespace: dictionary
spec:
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      volumes:
      - name: nginx-mnt
        hostPath:
          path: /root/Dictionary/nginx
      containers:
      - name: nginx-ctner
        image: nginx
        workingDir: /project
        command:
        - bash
        - "-c"
        - |
          set -ex
          nginx -c /project/conf/nginx.conf -g 'daemon off;'
        volumeMounts:
        - name: nginx-mnt
          mountPath: /project
      # containers:
      # - name: nginx-ctn
      #   image: nginx
        # resources:
        #   limits:
        #     memory: "128M"
        #     cpu: "500m"
        ports:
        - containerPort: 8089
