Nginx/ingress-nginx.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: dictionary
spec:
  selector:
    app: nginx-pod
  ports:
  - port: 80
    targetPort: 8089
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dp
  namespace: dictionary
spec:
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      volumes:
      - name: nginx-mnt
        hostPath:
          path: /root/Dictionary/nginx
      containers:
      - name: nginx-ctner
        image: nginx
        workingDir: /project
        command:
        - bash
        - "-c"
        - |
          set -ex
          nginx -c /project/conf/nginx.conf -g 'daemon off;'
        volumeMounts:
        - name: nginx-mnt
          mountPath: /project
        ports:
        - containerPort: 8089

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dict
  namespace: dictionary
  annotations:           #注解信息
    nginx.ingress.kubernetes.io/rewrite-target: / #重写/路径
  labels:
    name: ingress-dict
spec:
  ingressClassName: nginx # 
  rules:
  - host: www.pwkldndqpxrsowfiekdnsnxk.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
